; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/drivers/dma/extr_dma-g2.c_g2_dma_interrupt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/drivers/dma/extr_dma-g2.c_g2_dma_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.dma_info = type { %struct.dma_channel* }
%struct.dma_channel = type { i32 }

@G2_NR_DMA_CHANNELS = common dso_local global i32 0, align 4
@g2_dma = common dso_local global %struct.TYPE_4__* null, align 8
@IRQ_HANDLED = common dso_local global i32 0, align 4
@IRQ_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @g2_dma_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @g2_dma_interrupt(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.dma_info*, align 8
  %9 = alloca %struct.dma_channel*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %48, %2
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @G2_NR_DMA_CHANNELS, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %51

14:                                               ; preds = %10
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @g2_dma, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %16, align 8
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, 536870912
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %47

25:                                               ; preds = %14
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @g2_bytes_remaining(i32 %26)
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = icmp eq i32 %28, 0
  %30 = zext i1 %29 to i32
  %31 = call i64 @likely(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %46

33:                                               ; preds = %25
  %34 = load i8*, i8** %5, align 8
  %35 = bitcast i8* %34 to %struct.dma_info*
  store %struct.dma_info* %35, %struct.dma_info** %8, align 8
  %36 = load %struct.dma_info*, %struct.dma_info** %8, align 8
  %37 = getelementptr inbounds %struct.dma_info, %struct.dma_info* %36, i32 0, i32 0
  %38 = load %struct.dma_channel*, %struct.dma_channel** %37, align 8
  %39 = load i32, i32* %6, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds %struct.dma_channel, %struct.dma_channel* %38, i64 %40
  store %struct.dma_channel* %41, %struct.dma_channel** %9, align 8
  %42 = load %struct.dma_channel*, %struct.dma_channel** %9, align 8
  %43 = getelementptr inbounds %struct.dma_channel, %struct.dma_channel* %42, i32 0, i32 0
  %44 = call i32 @wake_up(i32* %43)
  %45 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %45, i32* %3, align 4
  br label %53

46:                                               ; preds = %25
  br label %47

47:                                               ; preds = %46, %14
  br label %48

48:                                               ; preds = %47
  %49 = load i32, i32* %6, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %6, align 4
  br label %10

51:                                               ; preds = %10
  %52 = load i32, i32* @IRQ_NONE, align 4
  store i32 %52, i32* %3, align 4
  br label %53

53:                                               ; preds = %51, %33
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i32 @g2_bytes_remaining(i32) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @wake_up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
